<resources>
    <string name="app_name">Listen Freely</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">My Library</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="podcast">Podcasts</string>
    <string name="recently_played">Recently Played</string>
    <string name="user">Welcome User,</string>
    <string name="album">Album</string>
    <string name="tracks">All Tracks</string>
    <string name="anime">Anime Song</string>
    <string name="podcast_all">All Podcasts</string>
    <string name="search_hint">Music, Podcasts</string>
    <string name="recently_searched">Recently Searched</string>
    <string name="trendings">Trending</string>
    <string name="channel">Channel</string>
    <string name="all">See All</string>
</resources>